Style/Bug: Fixed bug where waypoint button was pushing off edge of page and causing a gap, also updated fonts for buttons and styled the rest of mobile page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 
 p {
    font-family: "Playfair Dispay", sans-serif;
+   margin: 0;
 }
 
 .header {
@@ -15,9 +16,9 @@ p {
 .header-title {
    font-family: "Playfair Display", sans-serif;
    color: #fff;
-   font-size: 1.5rem;
    font-style: italic;
    font-weight: 500;
+   font-size: 2rem;
 }
 
 .no-padding {
@@ -64,13 +65,15 @@ p {
 .waypoint-button {
    color: #000;
    margin: 0.5rem 0.25rem;
+   font-family: "Playfair Display";
+   text-transform: capitalize;
 }
 
 .waypoint-button i {
    height: 1rem;
    width: 1rem;
    font-size: 1rem;
-   color: orangered;
+   color: #733049;
 }
 
 .button-container {
@@ -89,13 +92,15 @@ p {
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
-   border-radius: 0.25rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
       border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .route-btn {
    background-color: #a7291d;
+   font-family: "Playfair Display";
+   text-transform: uppercase;
+   font-weight: 600;
 }
 
 .route-btn:hover {
@@ -106,6 +111,9 @@ p {
 
 .reset-btn {
    background-color: #733049;
+   font-family: "Playfair Display";
+   text-transform: uppercase;
+   font-weight: 600;
 }
 
 .reset-btn:hover {
@@ -121,6 +129,34 @@ p {
 
 .footer {
    background: #d4d4d2;
+}
+
+.footer-padding {
+   padding: 0.5rem;
+}
+
+.footer-padding div a {
+   color: black;
+}
+.copyright {
+   margin-bottom: 0.5rem;
+   font-size: smaller;
+}
+
+.modal {
+   color: black;
+}
+
+.social-links {
+   display: flex;
+   list-style-type: none;
+   margin: 0;
+}
+
+.social-links li {
+   padding: 0 0.25rem;
+   color: #733049;
+   font-size: 1.25rem;
 }
 
 @media (min-width: 768px) {
